--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-next": "15.0.1"
   }
 }
