Add description and update README.md

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # .env.example
+# Leave blank for development
 NEXT_PUBLIC_BASE_URL=
 ALLOWED_CRYPTOS=bitcoin,ethereum,dogecoin
 COIN_GECKO_API=https://api.coingecko.com/api/v3
+#API Key can be retrieved from creating a demo account
 COIN_GECKO_API_KEY=your_api_key_here
